# Spotify-Rehydrator

./: .coverage  .gitignore  .readthedocs.yaml  CITATION.cff  README.md  README.rst  functions.py  preprocess.py  rehydrate.py  requirements.txt  setup.cfg  setup.py  test_functions.py
.github/workflows/: python-publish.yml
docs/: conf.py  dev-requirements.txt  index.rst  requirements.txt  secrets-example.py
docs/source/: conf.py  index.rst
rehydrator/: functions.py  rehydrate.py
src/spotifyrehydrator/: rehydrate.py  utils.py
src/spotifyrehydrator /: rehydrate.py
tests/: mock_data.py  test_functions.py
tests/input_no_people/: StreamingHistory_music_0.json  StreamingHistory_music_1.json
tests/input_people/: Person001_StreamingHistory_music_1.json  Person002_StreamingHistory_music_0.json
